Fixed more contrast issues

--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -10,7 +10,7 @@ body {
     line-height: 1.5;
 }
 h1, h2 {
-    color: #D84315;
+    color: #791e02;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
